[metadata]
name = prometheus_openstack_exporter
version = 0.1.0
description = Exposes high level OpenStack metrics to Prometheus.
keywords =
    prometheus
    openstack
    exporter
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3
url = https://github.com/stustanet/prometheus-openstack-exporter/
classifiers =
    Development Status :: 4 - Beta
    Topic :: System :: Networking :: Monitoring
    License :: OSI Approved :: GPL3 License

[options]
python_requires = >=3.8
setup_requires =
    setuptools
install_requires =
    prometheus_client
    python-keystoneclient>=4.2.0
    python-novaclient>=17.4.0
    python-neutronclient>=7.3.0
    python-cinderclient
    netaddr
    requests
    PyYAML
packages = find:
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    prometheus-openstack-exporter = promethus_openstack_exporter.__main__:main